# salex

./: .gitignore  Cargo.toml  LICENSE  README.md  config.test.toml
.github/workflow/: checks.yml
.github/workflows/: checks.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/base/: config.rs  mod.rs
crates/api/src/base/extractors/: auth.rs  mod.rs
crates/api/src/routes/: mod.rs
crates/api/src/routes/order/: mod.rs
crates/api/src/routes/organization/: mod.rs
crates/api/src/routes/storage/: mod.rs  product.rs  storageable.rs  warehouse.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/extractors/: auth.rs  bincode.rs  mod.rs
crates/core/src/utils/: meilisearch.rs
crates/orders/: Cargo.toml
crates/orders/src/: main.rs
crates/orders/src/routes/: mod.rs  order.rs
crates/organization/: Cargo.toml
crates/organization/src/: main.rs
crates/organization/src/routes/: mod.rs  organization.rs
crates/prisma-cli/: Cargo.toml
crates/proto/: Cargo.toml  build.rs
crates/proto/migrations/: 20230512195842_base.down.sql  20230512195842_base.up.sql
crates/proto/prisma/: schema.prisma
crates/proto/proto/: customer.proto  manager.proto  order.proto  organization.proto  product.proto  warehouse.proto
crates/proto/src/: lib.rs  prisma.rs
crates/proto/src/customer/: mod.rs
crates/proto/src/database/: mod.rs
crates/proto/src/entities/customer/: mod.rs
crates/proto/src/entities/manager/: mod.rs
crates/proto/src/entities/order/: mod.rs
crates/proto/src/entities/warehouse/: mod.rs
crates/proto/src/manager/: mod.rs
crates/proto/src/order/: mod.rs
crates/proto/src/organization/: mod.rs  orders.rs
crates/proto/src/product/: mod.rs
crates/proto/src/storage/: mod.rs
crates/proto/src/warehouse/: mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: config.rs  main.rs
crates/storage/src/extractors/: bincode.rs  mod.rs  speedy.rs
crates/storage/src/routes/: cell.rs  mod.rs  product.rs  storageable.rs  warehouse.rs
src/: main.rs
