[package]
name = "salex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.68" # ¯\_(°ペ)_/¯
axum = "0.6.2"
axum-extra = { version = "0.4.2", features = ["protobuf"] }
speedy = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.24.1", features = ["full"] }

[dependencies]


[workspace]
members = [
    "crates/orders",
    "crates/storage",
    "crates/scheduler",
    "crates/syncer",
    "crates/proto"
]
