[package]
name = "salex-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
anyhow = { workspace = true }
proto = { path = "../proto" }

serde = { workspace = true }
bincode = { workspace = true }

hyper = { workspace = true }

serde_json = { workspace = true }

config  = { workspace = true }

mongodb = { workspace = true }

meilisearch-sdk = { workspace = true }
