[package]
name = "organization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
anyhow = { workspace = true }
proto = { path = "../proto" }
salex-core = { path = "../core" }

tokio = { workspace = true }
futures = { workspace = true }

mongodb = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tower-http = { workspace = true }

serde = { workspace = true }