[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql", "macros", "migrate", "time" ] }
anyhow = { workspace = true }
async-trait = "0.1.68"
time = "0.3.21"
