[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
# sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql", "macros", "migrate", "time", "json" ] }
anyhow = { workspace = true }
meilisearch-sdk = { workspace = true }
futures = { workspace = true }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = ["mysql"] }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]