[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
speedy = { workspace = true }
anyhow = { workspace = true }
proto = { path = "../proto" }

serde = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }

mongodb = { workspace = true }