[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
anyhow = { workspace = true }
proto = { path = "../proto" }

serde = { workspace = true }
bincode = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }

mongodb = { workspace = true }

config  = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tower-http = { workspace = true }

[dev-dependencies]
hyper = { workspace = true }